# lvgl_cpp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  LICENSE  MIGRATION_GUIDE.md  Makefile  README.md  add_docs.py  bench_churn_output.txt  bench_fragmentation_output.txt  bench_report_v2.html  cmake_install.cmake  idf_component.yml  lvgl_cpp.h  memory_report.html  missing_apis.md  refactor_widgets.py  test_core_api_phase9  valgrind_output.txt  valgrind_output_debug.txt
.agent/skills/perform_memory_profiling/: SKILL.md
.github/workflows/: api_audit.yml
bench/: bench.cpp  bench.h  bench_expanded.cpp  bench_main.cpp  bench_widgets.cpp
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_asan/lvgl_build/: Makefile  cmake_install.cmake
core/: cast.h  compatibility.h  event.cpp  event.h  event_proxy.cpp  event_proxy.h  group.cc  group.cpp  group.h  group_proxy.cpp  group_proxy.h  interaction_proxy.cpp  interaction_proxy.h  layout.h  layout_proxy.h  object.cc  object.cpp  object.h  observer.cc  observer.cpp  observer.h  scroll_proxy.h  state_proxy.cpp  state_proxy.h  style.cc  style.cpp  style.h  style_proxy.h  subject_proxy.h  traits.h  tree_proxy.cpp  tree_proxy.h  widget.h
core/mixins/: event_source.h  layoutable.h  positionable.h  sizable.h  stylable.h
design/: README.md  ROADMAP_V2.md  animations.md  api_coverage_plan.md  api_coverage_report.md  api_modernization_plan.md  callback_utilities.md  coverage_and_consistency_plan.md  coverage_expansion_plan.md  coverage_strategy_v4.md  display_optimizations.md  filesystems.md  fix_warnings_plan.md  fonts.md  gap_analysis.md  gold_to_platinum_roadmap.md  idiomatic_gap_analysis.md  implementation_plan.md  input_device_modernization.md  input_devices.md  issue_61_standardization.md  lvgl_9_5_implementation_plan.md  lvgl_9_5_migration_plan.md  lvgl_9_5_retrospective.md  memory_analysis.md  memory_test_suite_plan.md  migration_matrix.md  missing_obj_methods.md  mixin_consolidation.md  mixin_vs_proxy_discussion.md  obj_gap_analysis.md  observer_bindings_modernization.md  optimizations.md  phase_10_high_coverage_completion.md  phase_9_core_object_api.md  postmortem_devirtualization.md  reconciling_style_architecture.md  redundancy_audit.md  remediation_plan.md  scoped_enums_architecture.md  (+6 more)
design/core/: README.md  STYLES.md
design/system/: DRIVERS.md  LAYOUTS.md
design/widgets/: COMPLEX.md  CONTAINERS.md  INPUTS.md  OUTPUTS.md
display/: display.cc  display.cpp  display.h
display/drivers/: esp32_rgb.cpp  esp32_rgb.h  esp32_spi.cpp  esp32_spi.h
docs/: CI_AUDIT_INTEGRATION.md  MIGRATION_9_5.md  api_coverage.json
draw/: draw.cc  draw.cpp  draw.h  draw_buf.cpp  draw_buf.h  draw_task.cpp  draw_task.h  image_decoder.cc  image_decoder.cpp  image_decoder.h  image_descriptor.cpp  image_descriptor.h
examples/: hello_world.cpp
examples/esp32/: README.md  hello_world.cpp
examples/esp32/hello_world/: README.md
examples/esp32/round_display_hello/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/esp32/round_display_hello/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/esp32/round_display_hello/main/hw/: chsc6x.cpp  gc9a01.cpp
examples/esp32/round_display_hello/main/sys/: lvgl_port.cpp  lvgl_port.h
examples/esp32/round_display_hello/main/ui/: earth_svg.h  hello_world.cpp  hello_world.h  select_hello.cpp  select_hello.h
examples/esp32_c3_hello_world/: CMakeLists.txt
examples/esp32_c3_hello_world/main/: CMakeLists.txt  idf_component.yml
examples/esp32_c3_hello_world/main/sys/: lvgl_port.cpp  lvgl_port.h
examples/esp32_c3_hello_world/main/ui/: hello_world.cpp
examples/select_hello/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/select_hello/main/: CMakeLists.txt  main.cpp
font/: font.cc  font.cpp  font.h  owned_font.cpp  owned_font.h
indev/: button_input.h  encoder_input.h  gesture_event.h  gesture_proxy.h  indev_data.h  input_device.cc  input_device.cpp  input_device.h  keypad_input.h  pointer_input.h
lvgl_build/: Makefile  cmake_install.cmake
misc/: anim_exec_callback.h  anim_path_callback.h  animation.cc  animation.cpp  animation.h  animation_timeline.cpp  animation_timeline.h  async.cpp  async.h  color.cc  color.cpp  color.h  constants.h  enums.h  file_system.cc  file_system.cpp  file_system.h  geometry.h  layout.h  log.cpp  log.h  mask.h  math_3d.h  style.cpp  style.h  style_base.h  theme.cpp  theme.h  timer.cc  timer.cpp  timer.h  vector.cpp  vector.h
scripts/: audit_api_coverage.py  audit_declarations.py  check_headers.py  list_missing_functions.py  profile_runner.py  profile_runner_v2.py
tests/: bench_baseline.c  bench_baseline.cpp  bench_churn.c  bench_churn.cpp  bench_churn_stability.cpp  bench_events.c  bench_events.cpp  bench_fragmentation.c  bench_fragmentation.cpp  bench_widgets.c  bench_widgets.cpp  lv_conf_test.h  observer_test.cc  observer_test.cpp  test_align.cpp  test_animation.cpp  test_animation_timeline.cpp  test_api_expansion.cpp  test_api_hardening.cpp  test_api_properties.cpp  test_async.cpp  test_callbacks.cpp  test_cast.cpp  test_chart_table.cpp  test_complex_widgets.cc  test_complex_widgets.cpp  test_constants.cpp  test_core_api_phase9.cpp  test_core_widgets.cc  test_core_widgets.cpp  test_coverage_sweep.cpp  test_display_utils.cpp  test_draw_task.cpp  test_enums.cpp  test_event_system.cpp  test_file_system.cpp  test_fluent_api.cpp  test_fluent_styles.cpp  test_font.cpp  test_geometry.cpp  (+36 more)
utility/esp32/simd/: simd_plugin.cpp  simd_plugin.h
utility/portable/esp32/: port.cpp  port.h
widgets/: 3dtexture.cpp  3dtexture.h  anim_image.cc  anim_image.cpp  anim_image.h  arc.cc  arc.cpp  arc.h  arclabel.cpp  arclabel.h  bar.cc  bar.cpp  bar.h  button.cc  button.cpp  button.h  button_matrix.cc  button_matrix.cpp  button_matrix.h  calendar.cc  calendar.cpp  calendar.h  canvas.cc  canvas.cpp  canvas.h  chart.cc  chart.cpp  chart.h  checkbox.cc  checkbox.cpp  checkbox.h  dropdown.cc  dropdown.cpp  dropdown.h  gltf.cpp  gltf.h  image.cc  image.cpp  image.h  image_button.cc  (+63 more)
(+13 files in other folders)
